--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/router": "~10.1.3",
     "@po-ui/ng-components": "^3.7.0",
     "@po-ui/ng-templates": "^3.7.0",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
+    "@popperjs/core": "^2.5.3",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
