--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/@po-ui/style/css/po-theme-default.min.css",
               "src/styles.css"
@@ -90,6 +91,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/@po-ui/style/css/po-theme-default.min.css",
               "src/styles.css"
